--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>toboolist</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   </head>
   <body>
     <!-- LOGO E TITOLO -->
@@ -19,62 +19,74 @@
     <!-- OPZIONI -->
     <main>
       <div class="container">
-        <div class="content">
-          <span class="task">Add task</span>
-          <span class="section">Add section</span>
-        </div>
+        <div class="content"></div>
 
         <!-- LISTA NON ORDINATA -->
         <div class="content2">
-          <h3>&#10162; New task</h3>
-          <ul>
-            <li>
-              <span class="check">&check;</span> Quarterly Newsletter
-              <span class="button1">Editorial</span>
-            </li>
-          </ul>
+          <div id="app">
+            <input
+              class="task"
+              type="text"
+              v-model="newTodoText"
+              placeholder="Aggiungi nuovo todo"
+            />
+            <button class="section" @click="addTodo">Aggiungi</button>
 
-          <h3>&#10162; Today</h3>
-          <ul>
-            <li>
-              <span class="check">&check;</span> Recruiting blog post
-              <span class="button1">Editorial</span>
-            </li>
-            <li>
-              <span class="check">&check;</span> Mobile app luaunch
-              <span class="button2">Q1 Goals</span>
-            </li>
-            <li>
-              <span class="cross">&#10005;</span> Interview John H.
-              <span class="button3">Recruiting</span>
-            </li>
-            <li>
-              <span class="check">&check;</span> Summit update to mobile
-              storefronts <span class="button4">Mobile</span>
-            </li>
-          </ul>
+            <h3>&#10162; New task</h3>
+            <ul>
+              <li v-for="(todo, index) in todos" :key="index">
+                <span class="check">&check;</span>
+                <span v-if="todo.done" style="text-decoration: line-through"
+                  >{{ todo.text }} Quarterly Newsletter >
+                </span>
+                <span class="button1">Editorial</span>
+              </li>
+            </ul>
 
-          <h3>&#10162; Upcoming</h3>
-          <ul>
-            <li>
-              <span class="cross">&#10005;</span> Schedule meeting with Alex
-            </li>
-            <li>
-              <span class="check">&check;</span> Homepage refresh
-              <span class="button5">Website</span>
-            </li>
-            <li>
-              <span class="check">&check;</span> Onboard new Sales team members
-              <span class="button6">Sales</span>
-            </li>
-            <li>
-              <span class="check">&check;</span> Review editorial calendar
-              <span class="button1">Editorial</span>
-            </li>
-          </ul>
+            <h3>&#10162; Today</h3>
+            <ul>
+              <li>
+                <span class="check">&check;</span> Recruiting blog post
+                <span class="button1">Editorial</span>
+              </li>
+              <li>
+                <span class="check">&check;</span> Mobile app luaunch
+                <span class="button2">Q1 Goals</span>
+              </li>
+              <li>
+                <span class="cross">&#10005;</span> Interview John H.
+                <span class="button3">Recruiting</span>
+              </li>
+              <li>
+                <span class="check">&check;</span> Summit update to mobile
+                storefronts <span class="button4">Mobile</span>
+              </li>
+            </ul>
+
+            <h3>&#10162; Upcoming</h3>
+            <ul>
+              <li>
+                <span class="cross">&#10005;</span> Schedule meeting with Alex
+              </li>
+              <li>
+                <span class="check">&check;</span> Homepage refresh
+                <span class="button5">Website</span>
+              </li>
+              <li>
+                <span class="check">&check;</span> Onboard new Sales team
+                members
+                <span class="button6">Sales</span>
+              </li>
+              <li>
+                <span class="check">&check;</span> Review editorial calendar
+                <span class="button1">Editorial</span>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </main>
+
     <script src="main.js"></script>
   </body>
 </html>
